Launch file working

--- a/semantic_inference_ros/config/label_groupings/ade20k_custom.yaml
+++ b/semantic_inference_ros/config/label_groupings/ade20k_custom.yaml
@@ -1,3 +1,4 @@
+---
 name: ade20k_custom
 distinct: true
 offset: -1
@@ -16,7 +17,4 @@ groups:
       133, 138, 139, 142, 144, 99, 121, 126, 136, 143, 148], source: raw_int, rgb: [0, 255, 0]}
   - {name: Traversable, labels: [4, 29, 102, 106, 17, 69, 7, 53, 55,
       92, 12, 141, 14, 30, 47, 95], source: raw_int, rgb: [0, 0, 255]}
-default_color:
-  - 0.9677975592919913
-  - 0.44127456009157356
-  - 0.5358103155058701
+default_color: [0.9677975592919913, 0.44127456009157356, 0.5358103155058701]
