Depth mask flag set to false

--- a/semantic_inference_ros/config/models/ade20k-hrnetv2-c1.yaml
+++ b/semantic_inference_ros/config/models/ade20k-hrnetv2-c1.yaml
@@ -1,6 +1,6 @@
 ---
 segmenter:
-  mask_predictions_with_depth: true 
+  mask_predictions_with_depth: false 
   model:
     model_file:             ade20k-hrnetv2-c1.onnx
     log_severity:           INFO 
